Fix capitalization and add Ignacio Parkour link
Corrected capitalization and added a new game link.

--- a/index.html
+++ b/index.html
@@ -41,9 +41,12 @@
 <br>
 <br>
 <h2>PLAY THE IGNACIO GAMES</h2>
-<h4>ignacio simulator(most popular):</h4>
+<h4>Ignacio Simulator(most popular):</h4>
     <p>
-    <a href="https://scratch.mit.edu/projects/1161808405/">Ignacio simulator</a>
+    <a href="https://scratch.mit.edu/projects/1161808405/">Ignacio Simulator</a>
   </p>
 ---------------------------------------------------------------
-
+  <h4>Ignacio Parkour:</h4>
+   <p>
+    <a href="https://scratch.mit.edu/projects/766474742/">Ignacio Parkour</a>
+  </p>
