--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <h2>PLAY THE IGNACIO GAMES</h2>
 <h4>Ignacio Simulator(most popular):</h4>
     <p>
-    <a href="https://scratch.mit.edu/projects/1161808405/">Ignacio Simulator</a> <blockquote class="imgur-embed-pub" lang="en" data-id="2zaq3FY"><a href="https://imgur.com/2zaq3FY">View post on imgur.com</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+    <a href="https://scratch.mit.edu/projects/1161808405/">Ignacio Simulator</a> 
   </p>
 ---------------------------------------------------------------
   <h4>Ignacio Parkour:</h4>
