Add image to Ignacio Simulator link
Added an image next to the Ignacio Simulator link.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <h2>PLAY THE IGNACIO GAMES</h2>
 <h4>Ignacio Simulator(most popular):</h4>
     <p>
-    <a href="https://scratch.mit.edu/projects/1161808405/">Ignacio Simulator</a> 
+    <a href="https://scratch.mit.edu/projects/1161808405/">Ignacio Simulator</a> <img src="https://imgur.com/2zaq3FY" />
   </p>
 ---------------------------------------------------------------
   <h4>Ignacio Parkour:</h4>
