Update image source for Ignacio Simulator

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <h2>PLAY THE IGNACIO GAMES</h2>
 <h4>Ignacio Simulator(most popular):</h4>
     <p>
-    <img src="images/ignaciosimulatordemonstration picture.PNG" alt="demonstration picture">
+    <img src="https://inolikebeans.github.io/Ignacio/ignaciosimulatordemonstration%20picture.PNG" alt="demonstration picture">
   </p>
 ---------------------------------------------------------------
   <h4>Ignacio Parkour:</h4>
