Add link and image for Ignacio Simulator

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 <h2>PLAY THE IGNACIO GAMES</h2>
 <h4>Ignacio Simulator(most popular):</h4>
     <p>
+      <a href="https://scratch.mit.edu/projects/1161808405/">Ignacio simulator</a>
+      
     <img src="https://inolikebeans.github.io/Ignacio/ignaciosimulatordemonstration%20picture.PNG" alt="demonstration picture">
   </p>
 ---------------------------------------------------------------
