Update Ignacio Parkour link in index.html

--- a/index.html
+++ b/index.html
@@ -51,5 +51,6 @@
 ---------------------------------------------------------------
   <h4>Ignacio Parkour:</h4>
    <p>
-    <a href="https://scratch.mit.edu/projects/766474742/">Ignacio Parkour</a>
+     <br>
+    <a href="https://scratch.mit.edu/projects/1245099275/">Ignacio Parkour</a>
   </p>
