--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 ---------------------------------------------------------------
   <h1>IGNACIO</h1>
   <p>verme saliva</p>
-  <p>status 3</p>
+  <p>status 4</p>
 <br>
 <br>
 <br>
@@ -51,6 +51,7 @@
 ---------------------------------------------------------------
   <h4>Ignacio Parkour:</h4>
    <p>
-     <br>
     <a href="https://scratch.mit.edu/projects/1245099275/">Ignacio Parkour</a>
+     <br>
+     <img src="https://github.com/inolikebeans/Ignacio/blob/main/ignacioparkourdemonstrationpicture.PNG" alt="demonstration picture">
   </p>
